--- a/mg-ingress.yaml
+++ b/mg-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
     external-dns.alpha.kubernetes.io/ttl: "60"
     alb.ingress.kubernetes.io/group.name: "shared-alb-group"
 spec:
